@startuml

' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity User {
  userId : text <PK>
  --
  email: text
  name: text
  password: text
  isActive: boolean
  avatarUrl: text
  createdAt: text
  updatedAt: text
}

entity Kata {
  kataId : number <PK>
  --
  indonesia: text
  sasak: text
  audioUrl: text
  contohPenggunaan: text
  status: enum
  createdAt: text
  updateAt: text

}

entity Contributor {
  contributorId: number <PK>
  ---
  userId: <FK>
  kataId: <FK>
}

User }o--|| Contributor
Kata }o--|| Contributor

@enduml
